--- a/styles.css
+++ b/styles.css
@@ -64,18 +64,16 @@ input[type="email"], textarea {
     border-radius: 4px;
 }
 
-input[type="submit"] {
+input[type="submit"]{
     background-color: #0077cc;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+
 }
 
-input[type="submit"]:hover {
-    background-color: #0055a4;
-}
 
 header {
     display: flex;
@@ -94,4 +92,18 @@ header {
 main {
     width: 80%;
     margin: 0 auto;
+}
+
+.boton {
+    display:flex ;
+    justify-content: center;
+    
+}
+button {
+    background-color: #0077cc;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
