--- a/styles.css
+++ b/styles.css
@@ -102,8 +102,11 @@ main {
 button {
     background-color: #0077cc;
     color: white;
-    padding: 10px 20px;
+    padding: 15px 20px;
+    margin: 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
+
+
